<resources>
    <string name="app_name">CloneiCaller</string>
    <string name="wellcome">Chào mừng bạn tới iCaller</string>
    <string name="app_desc">Ứng dụng chặn cuộc gọi rác</string>
    <string name="btn_start">Bắt đầu</string>
    <string name="version">Phiên bản 1.2</string>
    <string name="btn_ok">OK</string>
    <string name="req_permission">Request permission</string>
    <string name="content_req">Activate permissions related to <strong>Phone calls</strong></string>
    <string name="cancel">Cancel</string>
    <string name="settings">Cài đặt</string>
    <string name="sign_in">ĐĂNG NHẬP</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="first_number">+84 |</string>
    <string name="call_history">Lịch sử cuộc gọi</string>
    <string name="introduce">Giới thiệu</string>
    <string name="terms_security">Điều khoản bảo mật</string>
    <string name="terms_use">Điều khoản sử dụng</string>
    <string name="question">Câu hỏi thường gặp</string>
    <string name="logout">Đăng xuất</string>
    <string name="diary">DANH BẠ</string>
    <string name="input">Nhập vào đây</string>
    <string name="detail">CHI TIẾT</string>
    <string name="detail_call">CHI TIẾT CUỘC GỌI</string>
    <string name="default_name">default person</string>
    <string name="default_number">default phone number</string>
    <string name="call">GỌI</string>
    <string name="report_block">BÁO CÁO VÀ CHẶN</string>
    <string name="choose">Lựa chọn:</string>
    <string name="message">NHẮN TIN</string>
    <string name="block">CHẶN</string>
    <string name="save_contact">LƯU</string>
    <string name="default_country">default nation</string>
    <string name="complete">Hoàn thành !</string>
    <string name="complete1">Cảm ơn bạn đã giúp chúng tôi tạo ra</string>
    <string name="complete2">một trải nghiệm gọi điện tốt hơn!</string>
    <string name="default_network">default network</string>
    <string name="block_setting">Cài đặt chặn số</string>
    <string name="block_setting_advertising">Chặn các số quảng cáo</string>
    <string name="block_setting_foreign_number">Chặn các số nước ngoài</string>
    <string name="block_setting_out_contact">Chặn các số không có trong danh bạ</string>
    <string name="block_setting_scam">Chặn các số lừa đảo, đòi nợ</string>
    <string name="block_number">Chặn số</string>
    <string name="block_name">Tên</string>

    <string name="block_description">Mô tả</string>
    <string name="block_option">Lựa chọn:</string>
    <string name="diary_filter_number">DANH BẠ (2)</string>
    <string name="blocked_filter_number">DANH SÁCH CHẶN (0)</string>
    <string name="blocked_default_work">DEFAULT WORK</string>
    <string name="update_list_block_title">Cập nhật danh sách bị chặn</string>
    <string name="update_list_block_content">Nhận danh sách cập nhật các số spam được báo cáo gần nhất để phát hiện chúng nhanh chóng ngay cả khi ngoại tuyến. Cập nhật danh sách này thường xuyên.</string>
    <string name="update">Cập nhật</string>

    <string name="update_list_block_complete">Dữ liệu đã cập nhật mới nhất.</string>
    <string name="update_list_block_time">Lần cập nhật cuối cùng</string>
    <string name="setting_eng">Setting</string>
    <string name="title_activity_test_call_activiry">TestCallActiviry</string>
    <string name="delete_content">Bạn có chắc muốn xóa liên hệ này không?</string>
    <string name="delete_vie">Xóa</string>
    <string name="cancel_vie">Hủy</string>
    <string name="content_after_call_2">Tên liên lạc có đúng không? </string>
    <string name="content_after_call_3">Bạn có nghĩ đây là cuộc gọi spam? </string>
    <string name="correct_vie">Đúng</string>
    <string name="incorrect_vie">Sai</string>
    <string name="spam_vie">Spam</string>
    <string name="notspam_vie">Không phải spam</string>
    <string name="tell_us_who_this_is_vie">Cho chúng tôi biết đó là ai?</string>
    <string name="report_vie">Báo cáo</string>
    <string name="none_data">Không có dữ liệu</string>
    <string name="button_0">0\n+</string>
    <string name="button_1">1</string>
    <string name="button_2" translatable="false">2\na b c</string>
    <string name="button_3">3\nd e f</string>
    <string name="button_4">4\ng h i</string>
    <string name="button_5">5\nj k l</string>
    <string name="button_6">6\nm n o</string>
    <string name="button_7">7\np q r s</string>
    <string name="button_8">8\nt u v</string>
    <string name="button_9">9\nw x y z</string>
    <string name="button_star">*</string>
    <string name="button_thang">#</string>
    <string name="unblock">BỎ CHẶN</string>
    <string name="did_unblocked">Đã bỏ chặn</string>
    <string name="agree">ĐỒNG Ý</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="other">KHÁC</string>
    <string name="advertise">QUẢNG CÁO</string>
    <string name="lean">CHO VAY</string>
    <string name="owe">ĐÒI NỢ</string>
    <string name="lie">LỪA ĐẢO</string>
    <string name="land">BẤT ĐỘNG SẢN</string>
    <string name="hello_world">Hello Square World!</string>


</resources>