<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite">
    <LinearLayout
        android:weightSum="4"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_end_call_not_spam">
        <RelativeLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvNameAfterCall2"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:text="@string/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvPhoneNumberAfterCall2"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:layout_below="@+id/tvNameAfterCall2"
                android:text="@string/delete_vie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvCountryAfterCall2"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                android:textColor="@color/colorDarkGray"
                android:layout_below="@id/tvPhoneNumberAfterCall2"
                android:text="@string/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvNetworkAfterCall2"
                android:textColor="@color/colorDarkGray"
                android:textSize="16dp"
                android:layout_below="@id/tvCountryAfterCall2"
                android:text="@string/cancel_vie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgCloseAfterCall2"
                android:src="@drawable/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            android:textColor="@color/colorDarkGray"
            android:id="@+id/tvCallReceivedAfterCall2"
            android:text="Nhận cuộc gọi 0 phút trước"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/content_after_call_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:id="@+id/btnIncorrectAfterCall2"
                android:layout_marginRight="16dp"
                android:textColor="@color/colorPurple"
                android:background="@drawable/cancel_button"
                android:layout_weight="1"
                android:text="@string/incorrect_vie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnCorrectAfterCall2"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/setting_button"
                android:layout_weight="1"
                android:text="@string/correct_vie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>