<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_end_call_not_spam"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/tvNameAfterCall5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/colorWhite"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPhoneNumberAfterCall5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNameAfterCall5"
                android:text="@string/delete_vie"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvCountryAfterCall5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhoneNumberAfterCall5"
                android:layout_marginTop="16dp"
                android:text="@string/message"
                android:textColor="@color/colorDarkGray"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvNetworkAfterCall2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCountryAfterCall5"
                android:text="@string/cancel_vie"
                android:textColor="@color/colorDarkGray"
                android:textSize="16dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCloseAfterCall5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCallReceivedAfterCall5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tell_us_who_this_is_vie"
            android:textColor="@color/colorDarkGray"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtTellUsAfterCall5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/tell_us_who_this_is_vie" />

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/btnCorrectAfterCall5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/setting_button"
            android:text="@string/report_vie"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>