<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/bg_update_data_success"
        android:padding="16dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:text="@string/req_permission"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:src="@drawable/ic_close"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:textColor="@color/colorBlack"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/content_req"
            android:lines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/btnCancelDialogPer"
            android:textColor="@color/colorPurple"
            android:text="@string/cancel"
            android:layout_marginRight="16dp"
            android:background="@drawable/cancel_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSettingsDialogPer"
            android:textColor="@color/colorWhite"
            android:text="@string/setting_eng"
            android:layout_marginLeft="16dp"
            android:background="@drawable/setting_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>