<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".BlockActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical">
        <ImageView
            android:layout_marginLeft="16dp"
            android:id="@+id/imgBackFrBlock"
            android:src="@drawable/ic_arrow_back"
            android:layout_width="35dp"
            android:layout_height="35dp"/>
        <TextView
            android:layout_marginLeft="16dp"
            android:textAllCaps="true"
            android:text="@string/block_number"
            android:layout_toRightOf="@id/imgBackFrBlock"
            android:textColor="@color/colorPurple"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:textSize="16dp"
            android:textColor="@color/colorPurple"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/block_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:hint="@string/block_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:textSize="16dp"
            android:textColor="@color/colorPurple"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPurple"
            android:textSize="16dp"
            android:text="@string/block_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">
        <Button
            android:textColor="@color/colorWhite"
            android:text="@string/save_contact"
            android:background="@drawable/setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>