<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:weightSum="5"
        android:gravity="center"
        android:background="@color/colorPurple">
        <TextView
            android:layout_weight="4"
            android:text="ABC"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_weight="1"
            android:src="@drawable/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="16dp"
        android:textColor="@color/colorBlack"
        android:textSize="16dp"
        android:text="@string/delete_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:padding="16dp"
        android:orientation="horizontal">
        <Button
            android:layout_marginRight="8dp"
            android:textColor="@color/colorPurple"
            android:layout_weight="1"
            android:background="@drawable/cancel_button"
            android:text="@string/cancel_vie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:text="@string/delete_vie"
            android:background="@drawable/setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>