<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorHideSlide"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:id="@+id/lnear_filter"
        android:visibility="visible"
        android:background="@color/colorWhite"
        >
        <ImageView
            android:src="@drawable/ic_arrow_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/img_btn_back"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/background_search"
            >
            <EditText
                android:focusable="true"
                android:background="@drawable/background_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"

                android:hint="@string/input"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15dp"
                android:id="@+id/edt_search"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/lnear_filter"
        android:id="@+id/lnear_filter_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        >
        <LinearLayout
            android:id="@+id/ln_bar"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_displayed_diary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:text="@string/diary_filter_number"/>
            <TextView
                android:id="@+id/tv_displayed_block"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:text="@string/blocked_filter_number"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_below="@+id/lnear_filter"
        android:id="@+id/lnear_rcl_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="55dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:background="@color/colorWhite"
            android:id="@+id/rcl_filter"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:background="@color/colorWhite"
            android:id="@+id/rcl_filter_block"
            />
    </RelativeLayout>
</RelativeLayout>